# elaina-segment

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: build.yml
elaina_segment/: buffer_c.pyx  segment_c.c
src/elaina_segment/: segment_c.c
