[project]
name = "elaina-segment"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Elaina", email = "GreyElaina@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["setuptools", "Cython>3", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "Cython>=3.0.11",
]

[tool.setuptools]
py-modules = ["elaina_segment"]

[tool.cibuildwheel]
# don't build PyPy wheels, install from source instead
skip = "pp*"
